[package]
name = "img2bntx"
version = "1.0.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bntx = { git = "https://github.com/jam1garner/bntx", branch = "main" }
image = "0.23.10"
structopt = "0.3.19"
