[package]
name = "img2bntx"
version = "1.0.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bntx = { git = "https://github.com/jam1garner/bntx", rev = "430cb19" }
image = "0.24.3"
structopt = "0.3.19"
